fix auth widget CSS to remove horizontal scrollbar

--- a/files/css/1.css
+++ b/files/css/1.css
@@ -183,5 +183,7 @@ FIXME http://redmine.emweb.be/issues/1144
 
 .Wt-auth-login {
     width: 100% !important;
+    padding-right: 0px !important;
+    padding-left: 0px !important;
 }
 
